<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/ferramentas">
        <menu>
            <item
                android:id="@+id/config"
                android:title="@string/config" />
            <item
                android:id="@+id/extrato"
                android:title="@string/extrato" />
            <item
                android:id="@+id/backup"
                android:title="@string/backup" />
        </menu>
    </item>
    <item android:title="@string/extras">
        <menu>
            <item
                android:id="@+id/ajuda"
                android:title="@string/ajuda" />
            <item
                android:id="@+id/sobre"
                android:title="@string/sobre" />
        </menu>
    </item>
</menu>
