<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="top|center"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/welcome_user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:layout_gravity="top"
            android:gravity="top|center_horizontal"
            android:text="@string/login_app"
            android:textColor="@color/accent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <CalendarView
            android:id="@+id/userCalendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_user"
            android:layout_marginTop="15dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/btnHorasSemana"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:background="@color/accent"
            android:text="@string/btn_horas_semana"
            android:textColor="@color/text_primary" />

        <Button
            android:id="@+id/btnHorasMes"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/accent"
            android:text="@string/btn_horas_mes"
            android:textColor="@color/text_primary" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:headerLayout="@layout/nav_header_main"
        app:itemIconTint="@color/primary_dark"
        app:itemTextColor="@color/primary_dark"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>